--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.3",
     "express-session": "^1.14.1",
     "flash": "^1.1.0",
+    "forever": "^0.15.2",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
     "morgan": "^1.6.1",
